# coop-shift-monitor

./: .gitignore  config.yaml  pyproject.toml  state.json
.github/workflows/: check-shifts.yml
docs/: config.html  index.html  privacy.html  stats.json  terms.html
src/coop_shift_monitor/: config.py  main.py  matcher.py  models.py  notifier.py  parser.py  scraper.py  state.py
tests/: test_matcher.py  test_parser.py
tests/fixtures/: sample_shift_page.html
